syncthing/templates/network_policy.yml
#@ load("@ytt:data", "data")
#@ load("_ytt.lib.yml", "labels")

#@ if data.values.syncthing.enable_network_policy:
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: syncthing
  namespace: syncthing
  labels: #@ labels("netpol")
spec:
  podSelector:
    matchLabels: #@ labels("server")
  ingress:
  - from: #! allow access for ingress-controller
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: ingress-nginx
      podSelector: {}
    ports:
    - port: 8384
  - from: #! allow access to syncthing
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - port: 22000
#@ end
